--- a/_data/links.yml
+++ b/_data/links.yml
@@ -7,11 +7,5 @@
 - url: /cv
   title: CV
 
-- url: /stat-687
-  title: STAT 687
-
-- url: /seng-585
-  title: SENG 585
-
-- url: /r-intro
-  title: Intro to R
+- url: /courses
+  title: Courses
